--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,206 @@
-/* Compile your LESS file! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+html,
+body {
+  height: 100%;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  max-width: 800px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.container .header a {
+  color: black;
+  text-decoration: none;
+  font-size: 1.75rem;
+  font-weight: bold;
+  padding: 20px;
+}
+.container2 {
+  display: flex;
+  justify-content: start;
+  max-width: 800px;
+  margin: 0 auto;
+  background: lightgray;
+}
+.container2 img {
+  margin-left: 30px;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+.container2 address {
+  display: flex;
+  font-size: 2rem;
+  margin: 0 auto;
+  margin-top: 40px;
+}
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background: lightgray;
+  max-width: 800px;
+  margin: 0 auto;
+  line-spacing: 1.5;
+}
+.title h1 {
+  font-weight: bold;
+  font-size: 5rem;
+  margin: 0 auto;
+}
+.title h4 {
+  font-style: italic;
+  margin-left: 60px;
+  margin-top: 5px;
+  font-size: 2rem;
+}
+.title h5 {
+  font-size: 1.75rem;
+  margin-left: 30px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+}
+.title button {
+  background: red;
+  color: white;
+  padding: 15px;
+  font-size: 1.5rem;
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
