--- a/less/index.less
+++ b/less/index.less
@@ -52,8 +52,82 @@ table {
 * {
     box-sizing: border-box;
 }
+html {
+  font-size: 62.5%;
+}
 
 html, body {
     height: 100%;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  max-width: 800px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  
+    .header a{
+    color: black;
+    text-decoration: none;
+    font-size: 1.75rem;
+    font-weight: bold;
+    padding: 20px;
+  }
+}
+
+.container2 {
+  display: flex;
+  justify-content: start;
+  max-width: 800px;
+  margin: 0 auto;
+  background: lightgray;
+  
+  img {
+    margin-left: 30px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+  }
+  address {
+    display: flex;
+    font-size: 2rem;
+    margin: 0 auto;
+    margin-top: 40px;
+  }
+}
+  .title {
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-start;
+    background: lightgray;
+    max-width: 800px;
+    margin: 0 auto;
+    line-spacing: 1.5;
+    
+    h1 {
+      font-weight: bold;
+      font-size: 5rem;
+      margin: 0 auto;
+    }
+    h4 {
+      font-style: italic;
+      margin-left: 60px;
+      margin-top: 5px;
+      font-size: 2rem;
+    }
+    h5 {
+      font-size: 1.75rem;
+      margin-left: 30px;
+      margin-right: 20px;
+      margin-bottom: 10px;
+    }
+    button {
+     background: red;
+     color: white;
+     padding: 15px;
+     font-size: 1.5rem;
+     margin-left: 30px;
+     margin-bottom: 20px;
+    }
 }
 
