--- a/less/index.less
+++ b/less/index.less
@@ -49,9 +49,50 @@ table {
 }
 
 /* Set every element's box-sizing to border-box */
+
+@textColor: black;
+
+@linkColor: black;
+
+.containerDisplay(@justify, @align) {
+  display: flex;
+  justify-content: @justify;
+  align-items: @align;
+  max-width: 90%;
+}
+.linkDisplay {
+  color: @linkColor;
+  text-decoration: none;
+  font-size: 1.75rem;
+}
+
+.buttonDisplay {
+  background: red;
+  color: white;
+  padding: 15px;
+  font-size: 1.5rem;
+  
+  &:hover {
+    color: black;
+    background: yellow;
+  }
+}
+.h3Display {
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
+.h5Display {
+  font-size: 1.75rem;
+  margin-left: 30px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  line-height: 1.25;
+}
 * {
     box-sizing: border-box;
 }
+
 html {
   font-size: 62.5%;
 }
@@ -60,26 +101,19 @@ html, body {
     height: 100%;
 }
 .container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  max-width: 800px;
+  .containerDisplay(flex-end, end);
   margin-top: 20px;
   margin-bottom: 20px;
   
     .header a{
-    color: black;
-    text-decoration: none;
-    font-size: 1.75rem;
+    .linkDisplay;
     font-weight: bold;
     padding: 20px;
   }
 }
 
 .container2 {
-  display: flex;
-  justify-content: start;
-  max-width: 800px;
+ .containerDisplay(flex-start, center);
   margin: 0 auto;
   background: lightgray;
   
@@ -90,9 +124,11 @@ html, body {
   }
   address {
     display: flex;
+    flex-direction: column;
     font-size: 2rem;
     margin: 0 auto;
     margin-top: 40px;
+    line-height: 1.5;
   }
 }
   .title {
@@ -100,7 +136,7 @@ html, body {
    flex-direction: column;
    justify-content: flex-start;
     background: lightgray;
-    max-width: 800px;
+    max-width: 90%;
     margin: 0 auto;
     line-spacing: 1.5;
     
@@ -108,26 +144,47 @@ html, body {
       font-weight: bold;
       font-size: 5rem;
       margin: 0 auto;
+      color: @textColor;
     }
     h4 {
       font-style: italic;
-      margin-left: 60px;
-      margin-top: 5px;
-      font-size: 2rem;
-    }
-    h5 {
-      font-size: 1.75rem;
-      margin-left: 30px;
-      margin-right: 20px;
+      margin-left: 70px;
+      margin-top: 10px;
+      font-size: 2.25rem;
       margin-bottom: 10px;
     }
+    h5 {
+      .h5Display;
+    }
     button {
-     background: red;
-     color: white;
-     padding: 15px;
-     font-size: 1.5rem;
+     .buttonDisplay;
      margin-left: 30px;
-     margin-bottom: 20px;
+     margin-bottom: 20px;  
     }
 }
-
+.container3 {
+  .containerDisplay(flex-start, center);
+  flex-wrap: wrap;
+  margin: 0 auto;
+  
+  h3 {
+    .h3Display;
+    text-decoration: underline; 
+  }
+  p {
+    @textColor;
+    max-width: 45%;
+    margin-top: 10px;
+    font-size: 1.75rem;
+  }
+  .skills {
+    @textColor;
+    max-width: 45%;
+    
+  }
+  ul {
+    @textColor;
+    max-width: 45%;
+    margin-top: 10px;
+  }
+}
