--- a/css/index.css
+++ b/css/index.css
@@ -128,19 +128,26 @@ table {
 }
 /* Set every element's box-sizing to border-box */
 .linkDisplay {
-  color: black;
+  color: white;
   text-decoration: none;
   font-size: 1.75rem;
+}
+.linkDisplay:hover {
+  background: yellow;
+  color: black;
 }
 .buttonDisplay {
   background: red;
   color: white;
   padding: 15px;
   font-size: 1.5rem;
+  border-radius: 50px;
 }
 .buttonDisplay:hover {
   color: black;
-  background: yellow;
+  background: orange;
+  font-weight: bold;
+  font-size: 1.75rem;
 }
 .h3Display {
   font-weight: bold;
@@ -166,23 +173,30 @@ body {
 .container {
   display: flex;
   justify-content: flex-end;
-  align-items: end;
-  max-width: 90%;
+  align-items: center;
+  max-width: 80%;
+  margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 20px;
+  padding: 10px;
+  background: teal;
 }
 .container .header a {
-  color: black;
+  color: white;
   text-decoration: none;
   font-size: 1.75rem;
   font-weight: bold;
   padding: 20px;
 }
+.container .header a:hover {
+  background: yellow;
+  color: black;
+}
 .container2 {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  max-width: 90%;
+  max-width: 80%;
   margin: 0 auto;
   background: lightgray;
 }
@@ -204,7 +218,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   background: lightgray;
-  max-width: 90%;
+  max-width: 80%;
   margin: 0 auto;
   line-spacing: 1.5;
 }
@@ -233,38 +247,128 @@ body {
   color: white;
   padding: 15px;
   font-size: 1.5rem;
+  border-radius: 50px;
   margin-left: 30px;
   margin-bottom: 20px;
 }
 .title button:hover {
   color: black;
-  background: yellow;
+  background: orange;
+  font-weight: bold;
+  font-size: 1.75rem;
 }
 .container3 {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
-  max-width: 90%;
-  flex-wrap: wrap;
+  max-width: 80%;
   margin: 0 auto;
 }
-.container3 h3 {
+.container3 .aboutMe {
+  width: 45%;
+}
+.container3 .aboutMe h3 {
   font-weight: bold;
   font-size: 2.5rem;
   text-decoration: underline;
-}
-.container3 p {
-  @text Color;
-  max-width: 45%;
+  margin-bottom: 10px;
   margin-top: 10px;
+  margin-left: 5px;
+}
+.container3 .aboutMe p {
+  @text Color;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 5px;
   font-size: 1.75rem;
 }
 .container3 .skills {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   @text Color;
-  max-width: 45%;
+  width: 45%;
+  font-size: 1.75rem;
+  margin: 10 auto;
 }
-.container3 ul {
+.container3 .skills h3 {
+  font-weight: bold;
+  font-size: 2.5rem;
+  text-decoration: underline;
+  margin-left: 5px;
+}
+.container3 .skills ul {
   @text Color;
-  max-width: 45%;
   margin-top: 10px;
+  padding: 3px;
+}
+.container3 .skills li {
+  @text Color;
+  padding: 5px;
+}
+.container4 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: start;
+  max-width: 80%;
+  flex-direction: column;
+  margin: 0 auto;
+}
+.container4 h3 {
+  font-weight: bold;
+  font-size: 2.5rem;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-left: 5px;
+  text-decoration: underline;
+}
+.container4 table {
+  border: 4px solid black;
+  width: 100%;
+  margin: 0 auto;
+}
+.container4 tr {
+  border: 3px double lightgray;
+}
+.container4 th {
+  text-align: center;
+  vertical-align: center;
+  font-weight: bold;
+  font-size: 2rem;
+  padding: 10px;
+}
+.container4 td {
+  text-align: center;
+  vertical-align: center;
+  font-size: 1.75rem;
+  padding: 5px;
+}
+.footer {
+  background: teal;
+  margin-top: 20px;
+  max-width: 80%;
+  margin: 0 auto;
+}
+.footer h4 {
+  font-size: 1.9rem;
+  color: yellow;
+  text-align: center;
+  padding: 10px;
+}
+.footer nav {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+.footer nav a {
+  font-size: 1.5rem;
+  color: white;
+  text-decoration: none;
+}
+.footer nav a:hover {
+  color: red;
+  background: white;
+  padding: 5px;
 }
