--- a/css/index.css
+++ b/css/index.css
@@ -192,6 +192,15 @@ body {
   background: yellow;
   color: black;
 }
+@media (max-width: 500px) {
+  .container {
+    justify-content: center;
+    background: red;
+  }
+  .container .header a {
+    padding: 10px;
+  }
+}
 .container2 {
   display: flex;
   justify-content: flex-start;
@@ -213,6 +222,31 @@ body {
   margin-top: 40px;
   line-height: 1.5;
 }
+@media (max-width: 500px) {
+  .container2 {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    max-width: 80%;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    padding: 10px;
+    background: teal;
+    color: white;
+  }
+  .container2 .introPic img {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .container2 .introPic {
+    width: 60%;
+  }
+  .container2 address {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+  }
+}
 .title {
   display: flex;
   flex-direction: column;
@@ -220,7 +254,6 @@ body {
   background: lightgray;
   max-width: 80%;
   margin: 0 auto;
-  line-spacing: 1.5;
 }
 .title h1 {
   font-weight: bold;
@@ -241,6 +274,7 @@ body {
   margin-right: 20px;
   margin-bottom: 10px;
   line-height: 1.25;
+  line-height: 1.5;
 }
 .title button {
   background: red;
@@ -257,6 +291,29 @@ body {
   font-weight: bold;
   font-size: 1.75rem;
 }
+@media (max-width: 500px) {
+  .title {
+    align-items: flex-start;
+    max-width: 80%;
+    background: teal;
+    color: white;
+  }
+  .title h1 {
+    font-size: 2.7rem;
+    text-align: center;
+    color: yellow;
+    margin-bottom: 10px;
+  }
+  .title h4 {
+    margin: 0 auto;
+    text-align: center;
+    font-size: 1.9rem;
+  }
+  .title h5 {
+    font-size: 1.5rem;
+    margin-top: 10px;
+  }
+}
 .container3 {
   display: flex;
   justify-content: space-evenly;
@@ -266,6 +323,7 @@ body {
 }
 .container3 .aboutMe {
   width: 45%;
+  margin: 0 auto;
 }
 .container3 .aboutMe h3 {
   font-weight: bold;
@@ -285,19 +343,16 @@ body {
   font-size: 1.75rem;
 }
 .container3 .skills {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   @text Color;
   width: 45%;
-  font-size: 1.75rem;
-  margin: 10 auto;
 }
 .container3 .skills h3 {
   font-weight: bold;
   font-size: 2.5rem;
   text-decoration: underline;
-  margin-left: 5px;
+  margin-left: 10px;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
 .container3 .skills ul {
   @text Color;
@@ -307,6 +362,15 @@ body {
 .container3 .skills li {
   @text Color;
   padding: 5px;
+  font-size: 1.75rem;
+}
+@media (max-width: 500px) {
+  .container3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 90%;
+  }
 }
 .container4 {
   display: flex;
@@ -347,9 +411,9 @@ body {
 }
 .footer {
   background: teal;
-  margin-top: 20px;
   max-width: 80%;
   margin: 0 auto;
+  margin-top: 20px;
 }
 .footer h4 {
   font-size: 1.9rem;
